2010-01-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix issues reported by Fedora reviewer.
	* roboptim-core.spec.in: Fix dependencies as reported in ticket
	https://bugzilla.redhat.com/show_bug.cgi?id=538820.

2010-01-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix issues reported by Fedora reviewer.
	* roboptim-core.spec.in: Fix many problems reported in ticket
	https://bugzilla.redhat.com/show_bug.cgi?id=538820.

2010-01-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Add tar-ustar support in Automake to allow long filename.
	* configure.ac: Add tar-ustar option in AM_INIT_AUTOMAKE
	in order to package properly files with long names such	as
	``msvc/roboptim-core-dummy-plugin/roboptim-core-dummy-plugin.vcproj''.
	See http://www.gnu.org/software/automake/manual/automake.html#Options
	for more information.

2009-11-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Libtool generate dlls on Windows.
	* configure.ac: Add win32-dll flag to LT_INIT to
	enable dlls building on Microsoft Windows platform.
	It implies that the package can be compiled using
	``-no-undefined''.

2009-11-19  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2009-11-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.
	Spec file validated by Koji:
	http://koji.fedoraproject.org/koji/taskinfo?taskID=1814019

	* roboptim-core.spec.in: Add missing requirement.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix announce-gen download links.
	* Makefile.am: Re-order included rules.
	* build-aux: Synchronize.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Update NEWS.
	* NEWS: Fill 0.4 release information.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Update release scripts.
	* Makefile.am: Include new scripts.
	* build-aux: Synchronize.
	* doc/Makefile.am: Fix include path.
