@@ -34,7 +34,9 @@ libroboptim_core_la_SOURCES += 		\
 libroboptim_core_la_LDFLAGS = -version-info 1:1:0
 
 # Dummy plug-in.
-lib_LTLIBRARIES += roboptim-core-dummy-plugin.la
+plugindir = $(libdir)/$(PACKAGE_TARNAME)
+
+plugin_LTLIBRARIES = roboptim-core-dummy-plugin.la
 roboptim_core_dummy_plugin_la_SOURCES = roboptim-core-dummy-plugin.cc
 roboptim_core_dummy_plugin_la_LIBADD = libroboptim-core.la
 roboptim_core_dummy_plugin_la_LDFLAGS = -module -version-info 1:1:0
