@@ -1,3 +1,14 @@
+2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Build plug-in in a separate directory.
+
+	CAUTION: starting now, plug-in will be located in
+	in ``$(libdir)/roboptim-core'' which means that
+	users have to change LTDL_LIBRARY_PATH accordingly.
+
+	* roboptim-core.spec.in: Include plug-in in rpm.
+	* src/Makefile.am: Install plug-in in a separate directory.
+
 2010-01-08  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix issues reported by Fedora reviewer.
